remove all steel cell tags from concrete

--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -31,40 +31,11 @@
     "**Selection of material**\n",
     "```{figure} ../safety/Images/design_process_3.jpg\n",
     "```\n",
-    "A steel structure has been selected.\n",
-    "````\n",
+    "A concrete structure has been selected.\n",
     "\n",
-    "```{note}\n",
-    "For the steel structure, we apply an HEA section with strength class S235. This means that the calculation value for the steel strength is equal to 235 N/mm². For steel, the modulus of elasticity E for all strength classes equals to 210 × 10³ N/mm².\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
-    "```\n",
-    "\n",
-    "A HEA section features wide flanges, providing ample bearing width for the channel plates. Using the estimation rule, we estimate the height of a profile and note down the profile number and the data required for the verification calculation. These include: the weight of the beam per linear meter, the resistance moment $W_y$, and the quadratic area moment $I_y$.\n",
-    "\n",
-    "This information can be found in a steel profile table or through the Steel Profiles app by Building with Steel. Often, the table provides the mass per linear meter [kg/m]. This needs to be converted to weight per linear meter [kN/m]. To do this, we multiply the displayed number by 10 (rounding from 9.8: acceleration due to gravity in $m/s^2$) to convert from [kg] to [N], and then divide by 1000 (from N to kN). [N.B.: Integrated beams (joists) are often used with channel plates to reduce the construction height.]\n",
-    "\n",
-    "````{margin}\n",
     "**Estimation of structural dimensions, global sizing**\n",
     "```{figure} ../safety/Images/design_process_4.jpg\n",
     "```\n",
-    "````\n",
-    "\n",
-    "````{note}\n",
-    "The beam has a length of 6 meters. According to the estimation rule, the estimated beam height is then:  \n",
-    "$1/20 × 6000 = 300 \\ [mm]$  \n",
-    "Based on this, we choose a HE320A profile. We note down the data of this profile. The weight (mass) per linear meter is given in kg. This needs to be converted to kN:  \n",
-    "$99.5 \\ [kg/m]$ → $0.01 × 99.5 ≈ 0.10 \\ [kN/m]$.\n",
-    "\n",
-    "The image below is a screenshot of the Steel Profiles app. This app is free to install on your phone and provides an overview of available steel profiles and their properties.\n",
-    "\n",
-    "```{figure} Images/HEA_320.jpg\n",
-    "---\n",
-    "width: 400px\n",
-    "---\n",
-    "```\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
     "````\n",
     "\n",
     "For concrete and wooden beams, the weight per linear meter is not always provided. To determine that, we need to multiply the cross-sectional area ($b$ × $h \\ [m²]$) by the density $ρ \\ [kg/m³]$, and then multiply the result by the acceleration due to gravity $[m/s²]$. For concrete, the density is $2400 \\ [kg/m³]$, for reinforced concrete $2500 \\ [kg/m³]$, and for softwood approximately $300$ to $400 \\ [kg/m³]$ (depending on the strength class). The weight per linear meter becomes:\n",
@@ -121,18 +92,12 @@
     "$q_{eg}$ and $q_{rb}$ together form the permanent load $q_G$. The imposed load $q_{ob}$ is the variable load $q_Q$. For beam verification, the loads must be calculated per linear meter on the beam, unless the load is applied as a point load on the beam. We assume a uniformly distributed load.\n",
     "\n",
     "```{note}\n",
-    "The weight per linear meter of the beam (beam 3B-3D on the load-bearing floor plan) has already been determined while collecting the beam data: $q_{eg} = 0.98 [kN/m]$.\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
-    "```\n",
-    "\n",
-    "```{note}\n",
     "The weight of the concrete beam has also already been calculated: $q_{eg}$ = 4.5 [kN/m].\n",
     "+++\n",
     "{bdg-secondary}`Concrete`\n",
     "```\n",
     "\n",
-    "```{note} Static load\n",
+    "```{note}\n",
     "To determine the size of the resting load, we use the schematic load-bearing floor plan. On it, we shade the area supported by the beam. All elements in the shaded area, including the weight of any secondary beams, must be included in the load. On this load-bearing floor plan we also show the dimensions!\n",
     "```\n",
     "\n",
@@ -176,15 +141,8 @@
     "```\n",
     "\n",
     "```{note}\n",
-    "For a steel beam with a center-to-center distance of 8 meters:\n",
+    "For a concrete beam with a center-to-center distance of 8 meters:\n",
     "$q_{rb} = \\frac{8}{2} + \\frac{8}{2} \\times 4.9 [kN/m^2] = 39.2 [kN/m]$\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
-    "```\n",
-    "\n",
-    "```{note}\n",
-    "For a concrete beam, the resting load on that beam is obviously the same as that on the steel beam:\n",
-    "$q_{rb}= 39.2 [kN/m]$.\n",
     "+++\n",
     "{bdg-secondary}`Concrete`\n",
     "```\n",
@@ -194,14 +152,7 @@
     "```\n",
     "\n",
     "```{note}\n",
-    "For the imposed load on the steel beam, the following applies:\n",
-    "$q_Q = q_{ob} = (\\frac{8}{2} + \\frac{8}{2}) \\cdot 3 [kN/m^2] = 24 [kN/m]$\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
-    "```\n",
-    "\n",
-    "```{note}\n",
-    "For the imposed load on the concrete beam, also the following applies:\n",
+    "For the imposed load on the concrete beam, the following applies:\n",
     "$q_Q = q_{ob} = (\\frac{8}{2} + \\frac{8}{2}) \\cdot 3 [kN/m^2] = 24 [kN/m]$\n",
     "+++\n",
     "{bdg-secondary}`Concrete`\n",
@@ -251,34 +202,7 @@
     "````\n",
     "\n",
     "```{note}\n",
-    "For the steel beam, the design value of the load for the ULS check is:\n",
-    "\n",
-    "$q_{ULS} = 1.2 \\cdot (0.98 [kN/m] + 39.2 [kN/m]) + 1.5 \\cdot 24 [kN/m] = 84.2 [kN/m]$\n",
-    "\n",
-    "The maximum moment occurring in the beam:\n",
-    "\n",
-    "$M_d = \\frac{1}{8} q_{ULS} \\cdot l^2 = \\frac{1}{8} \\cdot 84.2 [kN/m] \\cdot (6 m)^2 = 379.0 kNm = 379 \\cdot 10^6 Nmm$\n",
-    "\n",
-    "The maximum stress in the beam:\n",
-    "$\\sigma_{m,d} = \\frac{M_d}{W} = \\frac{379 \\cdot 10^6 [Nmm]}{1479 \\cdot 10^3 [mm^3]} = 256.2 [N/mm^2]$ \n",
-    "\n",
-    "The stress must not exceed the material strength of $f_{m;d} = 235 [N/mm^2]$. We check this with the U.C.:\n",
-    "\n",
-    "$U.C. = \\frac{\\sigma_{m,d}}{f_{m;d}} = \\dfrac{256.2 [N/mm^2]}{235 [N/mm^2]} = 1.1 > 1 \\Rightarrow$ $\\textcolor{red}{\\text{Does not comply}}$\n",
-    "\n",
-    "The profile is too slender. We need a profile with a larger section modulus $W$:\n",
-    "\n",
-    "$W_{required} = 1.1 \\cdot 1479 \\cdot 10^3 [mm^3] = 1612.6 \\cdot 10^3 [mm^3]$\n",
-    "\n",
-    "In the steel profiles App, we see that this corresponds to an HE340A with $g = 1.05 [kN/m]$, $W = 1678 \\cdot 10^3 [mm^3]$, and $I = 27693 \\cdot 10^4 [mm^4]$.\n",
-    "\n",
-    "If we want to limit the construction height, we can also choose an HEB profile (HE300B) or a higher strength class (S355; see BGT check).\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
-    "```\n",
-    "\n",
-    "```{note}\n",
-    "For the concrete beam, the same steps:\n",
+    "For the concrete beam, the steps:\n",
     "\n",
     "$q_{ULS} = 1.2 \\cdot (4.5 [kN/m] + 39.2 [kN/m]) + 1.5 \\cdot 24 [kN/m] = 88.4 [kN/m]$\n",
     "\n",
@@ -383,33 +307,7 @@
     "```\n",
     "\n",
     "```{note}\n",
-    "For the deflection of the steel beam, the additional deflection is determined by the variable load only. All necessary data have already been determined.\n",
-    "\n",
-    "$w_Q = \\dfrac{5}{384} \\cdot \\dfrac{q_Q \\cdot l^4}{E \\cdot I_y} = \\dfrac{5}{384} \\cdot \\dfrac{24 [kN/m] \\cdot 6000 [mm^4]}{210 \\cdot 10^3 [N/mm^2] \\cdot 27690 \\cdot 10^4 [mm^4]} = 7.0 [mm]$\n",
-    "\n",
-    "$w_{norm} = 0.003 \\cdot l = 0.003 \\cdot 6000 [mm] = 18 [mm]$\n",
-    "\n",
-    "It is clear that for the steel beam, the strength is the governing factor. Regarding deflection, we could use a slimmer profile. Using a higher strength class of steel, such as S355, is advantageous and more sustainable!\n",
-    "\n",
-    "For deflection, a beam with a second moment of area:\n",
-    "\n",
-    "$I_y = U.C. \\cdot I_{y,oud} = 0.4 \\cdot 276.9 \\cdot 10^6 = 110.8 \\cdot 10^6 [mm^4]$\n",
-    "\n",
-    "When using strength class S355, we get:\n",
-    "\n",
-    "$U.C. = \\dfrac{256.2 [N/mm^2]}{355 [N/mm^2]} = 0.7$\n",
-    "\n",
-    "A beam satisfies the strength requirement with:\n",
-    "\n",
-    "$W_y = U.C. \\cdot W_{y,oud} = 0.7 \\cdot 1479 \\cdot 10^3 [mm^3] = 1035 \\cdot 10^3 [mm^3]$\n",
-    "\n",
-    "A HE300A strength class S355 meets both requirements and will be used. This profile has a weight of 0.88 [kN/m].\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
-    "```\n",
-    "\n",
-    "```{note}\n",
-    "For a concrete beam, we must account for creep (and a cracked cross-section). Here, \\textbf{k=3} and for an office, $\\psi_2 = 0.3$. For concrete strength class C30/37, $E_{c,m} = 33000 [N/mm^2]$. The deflection due to the permanent load is:\n",
+    "For a concrete beam, we must account for creep (and a cracked cross-section). Here, #\\textbf{k=3}$ and for an office, $\\psi_2 = 0.3$. For concrete strength class C30/37, $E_{c,m} = 33000 [N/mm^2]$. The deflection due to the permanent load is:\n",
     "\n",
     "$w_G = \\frac{5}{384} \\cdot \\dfrac{q_G \\cdot l^4}{E_{cm} \\cdot I_y} = \\frac{5}{384} \\cdot \\dfrac{(4.73 [kN/m] + 39.2 [kN/m]) \\cdot 6000 [mm^4]}{33000 N[/mm^2] \\cdot 6251.2 \\cdot 10^6 [mm^4]} = 3.6 [mm]$\n",
     "\n",
