--- a/book/calculation_examples/concrete/column.ipynb
+++ b/book/calculation_examples/concrete/column.ipynb
@@ -35,14 +35,8 @@
     "**Selection of material**\n",
     "```{figure} ../safety/Images/design_process_3.jpg\n",
     "```\n",
-    "A steel structure has been selected.\n",
+    "A concrete structure has been selected.\n",
     "````\n",
-    "\n",
-    "```{note}\n",
-    "The imposed load on the beam and the superimposed load have already been determined in the beam's verification calculation. We found $3$ for the imposed floor load and $4.9 [kN/m^2]$ for the superimposed load on the beam. We will use the beams identified in the verification calculation. For the steel structure, this was an HE300A, strength class S355, with a weight of $0.88 [kN/m]$.\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
-    "```\n",
     "\n",
     "```{note}\n",
     "For the concrete structure, this was a beam of 300 mm by 600 mm, made of concrete with a strength class C35/45 and a weight of $4.5 [kN/m]$.\n",
@@ -65,24 +59,8 @@
     "```\n",
     "````\n",
     "\n",
-    "````{note}\n",
-    "The steel structure uses HEA profiles for the columns. The most heavily loaded column is the central column on the ground floor.\n",
-    "\n",
-    "Using the estimation rules, we roughly determine the dimensions the column should have.\n",
-    "\n",
-    "In the Steel Profiles App, we search for the corresponding profile and note down the details.\n",
-    "\n",
-    "```{figure} Images/HEA_320.jpg\n",
-    "---\n",
-    "width: 400px\n",
-    "---\n",
-    "```\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
-    "````\n",
-    "\n",
     "```{note}\n",
-    "For a concrete column, we also need to gather the data. The most common choice is a square column. Using the estimation rule, we obtain a column: $3600 / 10 = 360 [mm]$. The weight of the column is thus \n",
+    "For a concrete column, we need to gather some data. The most common choice is a square column. Using the estimation rule, we obtain a column: $3600 / 10 = 360 [mm]$. The weight of the column is thus \n",
     "\n",
     "$0.36 [m] × 0.36 [m] × 25 [kN/m^3] = 3.24 [kN/m]$. \n",
     "\n",
@@ -129,11 +107,8 @@
     "```\n",
     "````\n",
     "\n",
-    "```{figure} Images/Table_Steel_Construction.jpg\n",
-    "```\n",
-    "\n",
     "```{figure} Images/Table_Concrete_Construction.jpg\n",
-    "```\n"
+    "```"
    ]
   },
   {
@@ -171,19 +146,6 @@
     "If the strength is not satisfied, then we can multiply the found $A$ by the value of the Unity Check to obtain the required cross-section: \n",
     "\n",
     "$A_{needed} = U.C. \\cdot A_{old}$\n",
-    "\n",
-    "```{note}\n",
-    "For the steel column, the total load on the column according to the weight table is 1705 [kN]. The stress in the column is:\n",
-    "\n",
-    "$\\sigma_{c;d}  = \\dfrac{F_{c;d}}{A} = \\dfrac{1704.7 \\cdot 10^3 [N]}{7680 [mm^2]}= 222 [N/mm^2]$\n",
-    "\n",
-    "The Unity Check for the HE240A profile can be determined:\n",
-    "\n",
-    "$U.C. \\Rightarrow \\dfrac{\\sigma_{c;d}}{f_{c;d}}=\\dfrac{222 [N/mm^2]}{235 [N/mm^2]}=0.94 < 1.0 \\Rightarrow \\textcolor{green}{\\text{Meets Requirement}}$\n",
-    "\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
-    "```\n",
     "\n",
     "```{note}\n",
     "From the weight table, it appears that the concrete column on the ground floor (under the first floor) must support 1854.5 kN. The stress in the column is:\n",
@@ -231,24 +193,6 @@
     "$l_{cr}$ is the buckling length. In a braced building with hinge connections between columns and beams, the buckling length of the column is equal to the floor height.\n",
     "\n",
     "```{figure} Images/Buckling_Column.jpg\n",
-    "```\n",
-    "\n",
-    "```{note}\n",
-    "For a column of a HE240A profile, we have:\n",
-    "\n",
-    "$F_{cr} = \\dfrac{pi^2 \\cdot E \\cdot I_z}{l^2_{cr}}=\\dfrac{\\pi^2 \\cdot 210000 [N/mm^2] \\cdot 27.69 \\cdot 10^6 [mm^4]}{(3600 [mm])^2}= 4428.3 \\cdot 10^3 [N] $\n",
-    "\n",
-    "$n = \\dfrac{F_{cr}}{F_{c;d}}= \\dfrac{4428.3 \\cdot 10^3 [N]}{1705 \\cdot 10^3 [N]} = 2.6 < 5 $\n",
-    "\n",
-    "$U.C. \\Rightarrow \\dfrac{5 \\cdot F_{c;d}}{F_{cr}}=\\dfrac{5 \\cdot 1705 \\cdot 10^3 [N]}{4428.3 \\cdot 10^3 [N]}= 1.92 > 1 \\Rightarrow \\textcolor{red}{\\text{Does not meet requirement}}$\n",
-    "\n",
-    "The buckling number is too small, indicating insufficient safety. A larger profile is needed:\n",
-    "\n",
-    "$I_{z,necessary} = U.C. \\cdot I_{z,old} = 1.92 \\cdot 27.69 \\cdot 10^6 [mm^4] = 52.6 \\cdot 10 [mm^4]$.\n",
-    "\n",
-    "In the steel profile app, a profile with at least this quadratic surface moment can be found. This could be, for example, a HE300A, which provides sufficient buckling safety. A higher strength class is not meaningful here.\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
     "```{note}\n",
