--- a/book/calculation_examples/safety/effect_vs_resistance.ipynb
+++ b/book/calculation_examples/safety/effect_vs_resistance.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(content:calculation_examples:safety:effect_vs_resistance)=\n",
+    "(calculation_examples:safety:effect_vs_resistance)=\n",
     "# Effect vs. Resistance\n",
     "\n",
-    "The results are visualized in two plots. The functions `plot_effect_vs_resistance` and `plot_Z`. First the necessary libraries are imported. The fuctions are shown below. In the plots, the numerical calculations and end results are shown. At the bottom of this page you can find a calculation example.\n",
+    "The results are visualized in two plots. The functions `plot_effect_vs_resistance` and `plot_Z`. First the necessary libraries are imported. The functions are shown below. In the plots, the numerical calculations and end results are shown. At the bottom of this page you can find a calculation example.\n",
     "\n",
     "```{note}\n",
     "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Effect vs Resistance plotting function"
+    "## Effect vs Resistance plotting function"
    ]
   },
   {
@@ -99,7 +99,7 @@
     "    plt.xlabel(\"Effect (E, left) vs. Resistance (R, right) [unit could be e.g. load in kN or stress in MPa]\")\n",
     "    plt.ylabel(\"Probability\")\n",
     "\n",
-    "    plt.savefig(\"E_R_curves_highgamma_uc0.81_beta6.8.pdf\", format=\"pdf\", bbox_inches=\"tight\")\n",
+    "    plt.savefig(\"E_R_curves_highgamma_uc0.81_beta6_8.pdf\", format=\"pdf\", bbox_inches=\"tight\")\n",
     "    plt.show()"
    ]
   },
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reliability Z function"
+    "## Reliability Z function"
    ]
   },
   {
