add correct links

--- a/book/calculation_examples/LCA/TSCT.ipynb
+++ b/book/calculation_examples/LCA/TSCT.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# The Structural Carbon Tool\n",
     "\n",
-    "## Video 1 Introduction\n",
+    "## Video 1: Introduction\n",
     "<div style=\"display: flex; justify-content: center;\">\n",
     "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
     "    <iframe\n",
@@ -19,7 +19,83 @@
     "</div>\n",
     "</div>\n",
     "\n",
-    "## Video 2 Project info sheet\n"
+    "## Video 2: Project info sheet\n",
+    "<div style=\"display: flex; justify-content: center;\">\n",
+    "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
+    "    <iframe\n",
+    "        src=\"https://www.youtube.com/watch?v=2NMb4_kiPlI&t=1s\"\n",
+    "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
+    "        frameborder=\"0\"\n",
+    "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
+    "        allowfullscreen\n",
+    "    ></iframe>\n",
+    "</div>\n",
+    "</div>\n",
+    "\n",
+    "## Video 3: Scheme input sheets\n",
+    "<div style=\"display: flex; justify-content: center;\">\n",
+    "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
+    "    <iframe\n",
+    "        src=\"https://www.youtube.com/watch?v=kQ4P7neUcPg&t=1s\"\n",
+    "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
+    "        frameborder=\"0\"\n",
+    "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
+    "        allowfullscreen\n",
+    "    ></iframe>\n",
+    "</div>\n",
+    "</div>\n",
+    "\n",
+    "## Video 4: Comparison sheet\n",
+    "<div style=\"display: flex; justify-content: center;\">\n",
+    "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
+    "    <iframe\n",
+    "        src=\"https://www.youtube.com/watch?v=JKKXBrXfLCs\"\n",
+    "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
+    "        frameborder=\"0\"\n",
+    "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
+    "        allowfullscreen\n",
+    "    ></iframe>\n",
+    "</div>\n",
+    "</div>\n",
+    "\n",
+    "## Video 5: Lifecycle material data\n",
+    "<div style=\"display: flex; justify-content: center;\">\n",
+    "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
+    "    <iframe\n",
+    "        src=\"https://www.youtube.com/watch?v=n4WGYyzKiTs&t=3s\"\n",
+    "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
+    "        frameborder=\"0\"\n",
+    "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
+    "        allowfullscreen\n",
+    "    ></iframe>\n",
+    "</div>\n",
+    "</div>\n",
+    "\n",
+    "## Video 6: Custom data\n",
+    "<div style=\"display: flex; justify-content: center;\">\n",
+    "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
+    "    <iframe\n",
+    "        src=\"https://www.youtube.com/watch?v=8NHSbaraFUI&t=1s\"\n",
+    "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
+    "        frameborder=\"0\"\n",
+    "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
+    "        allowfullscreen\n",
+    "    ></iframe>\n",
+    "</div>\n",
+    "</div>\n",
+    "\n",
+    "## Video 7: Example uses\n",
+    "<div style=\"display: flex; justify-content: center;\">\n",
+    "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
+    "    <iframe\n",
+    "        src=\"https://www.youtube.com/watch?v=rflYy5aSQLE&t=1s\"\n",
+    "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
+    "        frameborder=\"0\"\n",
+    "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
+    "        allowfullscreen\n",
+    "    ></iframe>\n",
+    "</div>\n",
+    "</div>"
    ]
   }
  ],
