--- a/book/calculation_examples/LCA/TSCT.ipynb
+++ b/book/calculation_examples/LCA/TSCT.ipynb
@@ -10,7 +10,7 @@
     "<div style=\"display: flex; justify-content: center;\">\n",
     "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
     "    <iframe\n",
-    "        src=\"https://www.youtube.com/watch?v=6K71NT3iNBA\"\n",
+    "        src=\"https://www.youtube.com/embed/6K71NT3iNBA?si=sSzqOVnoB3CX_0Ju\"\n",
     "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
     "        frameborder=\"0\"\n",
     "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
@@ -62,7 +62,7 @@
     "<div style=\"display: flex; justify-content: center;\">\n",
     "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
     "    <iframe\n",
-    "        src=\"https://www.youtube.com/watch?v=n4WGYyzKiTs&t=3s\"\n",
+    "        src=\"https://www.youtube.com/watch?v=6K71NT3iNBA\"\n",
     "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
     "        frameborder=\"0\"\n",
     "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
@@ -75,7 +75,7 @@
     "<div style=\"display: flex; justify-content: center;\">\n",
     "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
     "    <iframe\n",
-    "        src=\"https://www.youtube.com/watch?v=8NHSbaraFUI&t=1s\"\n",
+    "        src=\"https://www.youtube.com/watch?v=6K71NT3iNBA\"\n",
     "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
     "        frameborder=\"0\"\n",
     "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
@@ -88,7 +88,7 @@
     "<div style=\"display: flex; justify-content: center;\">\n",
     "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
     "    <iframe\n",
-    "        src=\"https://www.youtube.com/watch?v=rflYy5aSQLE&t=1s\"\n",
+    "        src=\"https://www.youtube.com/watch?v=6K71NT3iNBA\"\n",
     "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
     "        frameborder=\"0\"\n",
     "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
