--- a/book/calculation_examples/LCA/TSCT.ipynb
+++ b/book/calculation_examples/LCA/TSCT.ipynb
@@ -7,17 +7,15 @@
     "# The Structural Carbon Tool\n",
     "\n",
     "## Video 1: Introduction\n",
-    "<div style=\"display: flex; justify-content: center;\">\n",
-    "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
-    "    <iframe\n",
-    "        src=\"https://www.youtube.com/embed/6K71NT3iNBA?si=sSzqOVnoB3CX_0Ju\"\n",
-    "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
-    "        frameborder=\"0\"\n",
-    "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
-    "        allowfullscreen\n",
-    "    ></iframe>\n",
-    "</div>\n",
-    "</div>\n",
+    "<iframe\n",
+    "width=\"560\"\n",
+    "height=\"315\"\n",
+    "src=\"https://www.youtube.com/embed/6K71NT3iNBA?si=IzqPq30Ef8e-zcQH\"\n",
+    "title=\"YouTube video player\"\n",
+    "frameborder=\"0\"\n",
+    "allowfullscreen\n",
+    "></iframe>\n",
+    "\n",
     "\n",
     "## Video 2: Project info sheet\n",
     "<div style=\"display: flex; justify-content: center;\">\n",
