enter correct links with embed

--- a/book/calculation_examples/LCA/TSCT.ipynb
+++ b/book/calculation_examples/LCA/TSCT.ipynb
@@ -16,84 +16,65 @@
     "allowfullscreen\n",
     "></iframe>\n",
     "\n",
-    "\n",
     "## Video 2: Project info sheet\n",
-    "<div style=\"display: flex; justify-content: center;\">\n",
-    "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
-    "    <iframe\n",
-    "        src=\"https://www.youtube.com/watch?v=2NMb4_kiPlI&t=1s\"\n",
-    "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
-    "        frameborder=\"0\"\n",
-    "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
-    "        allowfullscreen\n",
-    "    ></iframe>\n",
-    "</div>\n",
-    "</div>\n",
+    "<iframe\n",
+    "width=\"560\"\n",
+    "height=\"315\"\n",
+    "src=\"https://www.youtube.com/embed/2NMb4_kiPlI?si=G1dRiKSPaRt5fb5x\"\n",
+    "title=\"YouTube video player\"\n",
+    "frameborder=\"0\"\n",
+    "allowfullscreen\n",
+    "></iframe>\n",
     "\n",
     "## Video 3: Scheme input sheets\n",
-    "<div style=\"display: flex; justify-content: center;\">\n",
-    "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
-    "    <iframe\n",
-    "        src=\"https://www.youtube.com/watch?v=kQ4P7neUcPg&t=1s\"\n",
-    "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
-    "        frameborder=\"0\"\n",
-    "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
-    "        allowfullscreen\n",
-    "    ></iframe>\n",
-    "</div>\n",
-    "</div>\n",
+    "<iframe\n",
+    "width=\"560\"\n",
+    "height=\"315\"\n",
+    "src=\"https://www.youtube.com/embed/kQ4P7neUcPg?si=ac_UYodv_xBQcNZn\"\n",
+    "title=\"YouTube video player\"\n",
+    "frameborder=\"0\"\n",
+    "allowfullscreen\n",
+    "></iframe>\n",
     "\n",
     "## Video 4: Comparison sheet\n",
-    "<div style=\"display: flex; justify-content: center;\">\n",
-    "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
-    "    <iframe\n",
-    "        src=\"https://www.youtube.com/watch?v=JKKXBrXfLCs\"\n",
-    "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
-    "        frameborder=\"0\"\n",
-    "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
-    "        allowfullscreen\n",
-    "    ></iframe>\n",
-    "</div>\n",
-    "</div>\n",
+    "<iframe\n",
+    "width=\"560\"\n",
+    "height=\"315\"\n",
+    "src=\"https://www.youtube.com/embed/JKKXBrXfLCs?si=B6Gk7eL4HuJ0OT7N\"\n",
+    "title=\"YouTube video player\"\n",
+    "frameborder=\"0\"\n",
+    "allowfullscreen\n",
+    "></iframe>\n",
     "\n",
     "## Video 5: Lifecycle material data\n",
-    "<div style=\"display: flex; justify-content: center;\">\n",
-    "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
-    "    <iframe\n",
-    "        src=\"https://www.youtube.com/watch?v=6K71NT3iNBA\"\n",
-    "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
-    "        frameborder=\"0\"\n",
-    "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
-    "        allowfullscreen\n",
-    "    ></iframe>\n",
-    "</div>\n",
-    "</div>\n",
+    "<iframe\n",
+    "width=\"560\"\n",
+    "height=\"315\"\n",
+    "src=\"https://www.youtube.com/embed/JKKXBrXfLCs?si=B6Gk7eL4HuJ0OT7N\" \n",
+    "title=\"YouTube video player\"\n",
+    "frameborder=\"0\"\n",
+    "allowfullscreen\n",
+    "></iframe>\n",
     "\n",
     "## Video 6: Custom data\n",
-    "<div style=\"display: flex; justify-content: center;\">\n",
-    "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
-    "    <iframe\n",
-    "        src=\"https://www.youtube.com/watch?v=6K71NT3iNBA\"\n",
-    "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
-    "        frameborder=\"0\"\n",
-    "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
-    "        allowfullscreen\n",
-    "    ></iframe>\n",
-    "</div>\n",
-    "</div>\n",
+    "<iframe\n",
+    "width=\"560\"\n",
+    "height=\"315\"\n",
+    "src=\"https://www.youtube.com/embed/8NHSbaraFUI?si=oAARC-2H_3_e8fj5\"\n",
+    "title=\"YouTube video player\"\n",
+    "frameborder=\"0\"\n",
+    "allowfullscreen\n",
+    "></iframe>\n",
     "\n",
     "## Video 7: Example uses\n",
-    "<div style=\"display: flex; justify-content: center;\">\n",
-    "<div style=\"position: relative; width: 70%; height: 0; padding-bottom: 56.25%;\">\n",
-    "    <iframe\n",
-    "        src=\"https://www.youtube.com/watch?v=6K71NT3iNBA\"\n",
-    "        style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"\n",
-    "        frameborder=\"0\"\n",
-    "        allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\"\n",
-    "        allowfullscreen\n",
-    "    ></iframe>\n",
-    "</div>\n",
-    "</div>"
+    "<iframe\n",
+    "width=\"560\"\n",
+    "height=\"315\"\n",
+    "src=\"https://www.youtube.com/embed/rflYy5aSQLE?si=YMtzwL-if5tr8Y3V\"\n",
+    "title=\"YouTube video player\"\n",
+    "frameborder=\"0\"\n",
+    "allowfullscreen\n",
+    "></iframe>"
    ]
   }
  ],
