--- a/book/calculation_examples/LCA/TSCT.ipynb
+++ b/book/calculation_examples/LCA/TSCT.ipynb
@@ -6,6 +6,18 @@
    "source": [
     "# The Structural Carbon Tool\n",
     "\n",
+    "Calculating embodied carbon in the same rigorous way across all designs will allow meaningful comparisons to be made between structural schemes, developing our understanding of embodied carbon as well as how the industry can most effectively reach net zero carbon. This guidance is equally applicable to infrastructure and building projects. The calculation of embodied carbon must become a key part of every design process. Such efforts support the immediate need to reduce resource demand and increase reuse and recycling to enable a circular economy. \n",
+    "\n",
+    "This guidance will:\n",
+    "- Help you select and specify materials that are efficient while ensuring they're safe and durable\n",
+    "- Establish an agreed set of principals for the measuring of embodied carbon\n",
+    "- Reduce the amount of carbon you use in your projects\n",
+    "- Quantify the benefits of low carbon design to the client and society\n",
+    "- Inform you about alternative ways you can move towards net zero carbon design\n",
+    "- This guide has been translated into an open-source Excel estimator, The Structural Carbon Tool Version 2. The tool can be used to quickly identify ways in which to minimise embodied carbon on your designs.\n",
+    "\n",
+    "The guide supports legislation by UK Parliament to achieve net zero carbon emissions by 2050 and forms a part of the response of The Institution of Structural Engineers to implement the necessary changes in the profession to respond to the climate emergency. IStructE has built a portfolio of guidance documents, FAQs and articles related to embodied carbon.\n",
+    "\n",
     "## Video 1: Introduction\n",
     "<iframe\n",
     "width=\"560\"\n",
