insert download excel

--- a/book/calculation_examples/LCA/TSCT.ipynb
+++ b/book/calculation_examples/LCA/TSCT.ipynb
@@ -14,9 +14,9 @@
     "- Reduce the amount of carbon you use in your projects\n",
     "- Quantify the benefits of low carbon design to the client and society\n",
     "- Inform you about alternative ways you can move towards net zero carbon design\n",
-    "- This guide has been translated into an open-source Excel estimator, The Structural Carbon Tool Version 2. The tool can be used to quickly identify ways in which to minimise embodied carbon on your designs.\n",
+    "- This guide has been translated into an open-source Excel estimator, [The Structural Carbon Tool Version 2](book\\calculation_examples\\LCA\\TSCT_download.xlsm). The tool can be used to quickly identify ways in which to minimise embodied carbon on your designs.\n",
     "\n",
-    "The guide supports legislation by UK Parliament to achieve net zero carbon emissions by 2050 and forms a part of the response of The Institution of Structural Engineers to implement the necessary changes in the profession to respond to the climate emergency. IStructE has built a portfolio of guidance documents, FAQs and articles related to embodied carbon.\n",
+    "The following videos will explain how The Structural Carbon Tool works.\n",
     "\n",
     "## Video 1: Introduction\n",
     "<iframe\n",
