--- a/book/calculation_examples/LCA/TSCT.ipynb
+++ b/book/calculation_examples/LCA/TSCT.ipynb
@@ -14,7 +14,11 @@
     "- Reduce the amount of carbon you use in your projects\n",
     "- Quantify the benefits of low carbon design to the client and society\n",
     "- Inform you about alternative ways you can move towards net zero carbon design\n",
-    "- This guide has been translated into an open-source Excel estimator, [The Structural Carbon Tool Version 2](book\\calculation_examples\\LCA\\TSCT_download.xlsm). The tool can be used to quickly identify ways in which to minimise embodied carbon on your designs.\n",
+    "- This guide has been translated into an open-source Excel estimator, [The Structural Carbon Tool Version 2](../LCA/TSCT_download.xlsm). The tool can be used to quickly identify ways in which to minimise embodied carbon on your designs.\n",
+    "\n",
+    "<a href=\"../LCA/TSCT_download.xlsm\" download=\"TSCT_download.xlsm\" class=\"btn btn-primary\" role=\"button\">Download The Structural Carbon Tool Version 2</a>\n",
+    "\n",
+    "\n",
     "\n",
     "The following videos will explain how The Structural Carbon Tool works.\n",
     "\n",
