--- a/book/calculation_examples/LCA/TSCT.ipynb
+++ b/book/calculation_examples/LCA/TSCT.ipynb
@@ -62,7 +62,7 @@
     "<iframe\n",
     "width=\"560\"\n",
     "height=\"315\"\n",
-    "src=\"https://www.youtube.com/embed/n4WGYyzKiTs?si=x84iWOF1IFy8VDwE\"\n",
+    "src=\"https://www.youtube.com/embed/n4WGYyzKiTs?si=6sNmhkRts526P3nZ\"\n",
     "title=\"YouTube video player\"\n",
     "frameborder=\"0\"\n",
     "allowfullscreen\n",
