--- a/book/design/concrete/hollow_core_slabs.ipynb
+++ b/book/design/concrete/hollow_core_slabs.ipynb
@@ -146,10 +146,6 @@
     "```{figure} Images/HollowCoreConnections.jpg\n",
     "```\n",
     "\n",
-    "<div style=\"text-align: center;\">\n",
-    "    <iframe src=\"../../_static/Connection_Concrete.html\" width=\"750\" height=\"300\" frameborder=\"0\"></iframe>\n",
-    "</div>\n",
-    "\n",
     "## Product specifications VBI isolation slabfloor A320\n",
     "\n",
     "| Property                      | Value                           |\n",
@@ -228,7 +224,13 @@
     "### Connections (All types of hollow core slabs)\n",
     "\n",
     "```{figure} Images/Integrated_Beams.jpg\n",
-    "```"
+    "```\n",
+    "\n",
+    "## Hollow core slab in 3D\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <iframe src=\"../../_static/Connection_Concrete_HollowCore.html\" width=\"750\" height=\"300\" frameborder=\"0\"></iframe>\n",
+    "</div>\n"
    ]
   }
  ],
