--- a/book/design/concrete/precast_concrete_planks.ipynb
+++ b/book/design/concrete/precast_concrete_planks.ipynb
@@ -54,7 +54,19 @@
     "## Connections\n",
     "\n",
     "```{figure} Images/Dycore_Precast2.jpg\n",
-    "``` "
+    "``` \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Connection in 3D\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <iframe src=\"../../_static/Connection_Concrete_Standard.html\" width=\"750\" height=\"300\" frameborder=\"0\"></iframe>\n",
+    "</div>"
    ]
   }
  ],
