--- a/book/design/steel/connections_matrix.ipynb
+++ b/book/design/steel/connections_matrix.ipynb
@@ -16,8 +16,22 @@
     "```{figure} Images/Connections_Matrix.jpg\n",
     "```\n",
     "\n",
+    "## Steel connection in 3D\n",
+    "\n",
     "<div style=\"text-align: center;\">\n",
-    "    <iframe src=\"../../_static/Connection_Steel.html\" width=\"750\" height=\"300\" frameborder=\"0\"></iframe>\n",
+    "    <iframe src=\"../../_static/Connection_Steel_Standard.html\" width=\"750\" height=\"300\" frameborder=\"0\"></iframe>\n",
+    "</div>\n",
+    "\n",
+    "## Steel truss connection in 3D\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <iframe src=\"../../_static/Connection_Steel_Truss.html\" width=\"750\" height=\"300\" frameborder=\"0\"></iframe>\n",
+    "</div>\n",
+    "\n",
+    "## Steel corner connection in 3D\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <iframe src=\"../../_static/Connection_Steel_Corner.html\" width=\"750\" height=\"300\" frameborder=\"0\"></iframe>\n",
     "</div>"
    ]
   }
