--- a/book/design/concrete/reinforcement_tables.ipynb
+++ b/book/design/concrete/reinforcement_tables.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Reinforcement tables\n",
     "\n",
-    "Below, different reinforcement tables are presented. Each table represents a different type of structure. For an ellaborate calculation of the Moment - Normal force interaction diagram, please see [Moment normal force interaction](content:calculation_examples:safety:effect_vs_resistance)."
+    "Below, different reinforcement tables are presented. Each table represents a different type of structure. For an ellaborate calculation of the Moment - Normal force interaction diagram, please see [Moment normal force interaction](content:design:concrete:moment_normalforce_interaction)."
    ]
   },
   {
