--- a/book/design/concrete/hollow_core_slabs.ipynb
+++ b/book/design/concrete/hollow_core_slabs.ipynb
@@ -14,7 +14,7 @@
     "Hollow core slabs are prefabricated floor elements. The hollow plates are prestressed and arrive on site fully\n",
     "prefabricated. The hollow cores save a considerable amount of weight compared to the massive slab floor.\n",
     "The savings can be as much as 50%. This means that also the main bearing structure and foundation can be made\n",
-    "considerably lighter [^1] [^2].   \n",
+    "considerably lighter [^1][^2].   \n",
     "\n",
     "The floor concept is based on the following principles:\n",
     "- No voids.\n",
@@ -260,14 +260,8 @@
     "```{figure} Images/Integrated_Beams.jpg\n",
     "```\n",
     "\n",
-    "## Hollow core slab in 3D\n",
-    "\n",
-    "<div style=\"text-align: center;\">\n",
-    "    <iframe src=\"../../_static/Connection_Concrete_HollowCore.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
-    "</div>\n",
-    "\n",
     "[^1]: [VBI.nl](https://www.vbi.nl/): Hollow core slabs and system floors.\n",
-    "[^2]: [Dycore.nl](https://www.dycore.nl/): Different floor systems. CAD drawings and details can be downloaded. Design graphs are available.\n"
+    "[^2]: [Dycore.nl](https://www.dycore.nl/): Different floor systems. CAD drawings and details can be downloaded. Design graphs are available."
    ]
   }
  ],
