small changes to fix local build errors

--- a/book/design_workflow/general_loads/structural_safety.ipynb
+++ b/book/design_workflow/general_loads/structural_safety.ipynb
@@ -123,7 +123,7 @@
     "\n",
     "## Python implementation\n",
     "\n",
-    "If you are interested in the background of the functions, implemented in python to obtain fast numerical results, you can find those in the [safety calculation examples](content:calculation_examples:safety:effect_vs_resistance). A calculation example is provided at the bottom of this page."
+    "If you are interested in the background of the functions, implemented in python to obtain fast numerical results, you can find those in the [safety calculation examples](../../calculation_examples/safety/effect_vs_resistance.ipynb). A calculation example is provided at the bottom of this page."
    ]
   }
  ],
