--- a/book/design/steel/connections_matrix.ipynb
+++ b/book/design/steel/connections_matrix.ipynb
@@ -17,10 +17,29 @@
     "---\n",
     "---\n",
     "Steel connections detailed matrix.\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3D standard steel connection\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
-    "    <iframe src=\"../../_static/Connection_Steel.html\" width=\"750\" height=\"300\" frameborder=\"0\"></iframe>\n",
+    "    <iframe src=\"../../_static/Connection_Steel_Standard.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
+    "</div>\n",
+    "\n",
+    "# 3D corner steel connection\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <iframe src=\"../../_static/Connection_Steel_Corner.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
+    "</div>\n",
+    "\n",
+    "# 3D truss steel connection\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <iframe src=\"../../_static/Connection_Steel_Truss.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
     "</div>"
    ]
   }
