Try to add 3D timber connections

--- a/book/design/timber/connection_elements.ipynb
+++ b/book/design/timber/connection_elements.ipynb
@@ -91,8 +91,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 3D connection in timber\n",
+    "\n",
     "<div style=\"text-align: center;\">\n",
-    "    <iframe src=\"../../_static/Connection_Timber.html\" width=\"750\" height=\"300\" frameborder=\"0\"></iframe>\n",
+    "    <iframe src=\"../../_static/Connection_Timber_Standard.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
+    "</div>\n",
+    "\n",
+    "# 3D connection in timber advanced\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <iframe src=\"../../_static/Connection_Timber_Advanced.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
     "</div>"
    ]
   }
