Embed disclaimer structural carbon tool outdated

--- a/book/calculation_examples/LCA/TSCT.ipynb
+++ b/book/calculation_examples/LCA/TSCT.ipynb
@@ -18,6 +18,10 @@
     "\n",
     "The following videos will explain how The Structural Carbon Tool works.\n",
     "\n",
+    "```{warning}\n",
+    "This tool was obtained from the [Website of The Institution of Structural Engineers](https://www.istructe.org/resources/guidance/the-structural-carbon-tool/) at 27/10/2024. Please be aware that it may be outdated.\n",
+    "```\n",
+    "\n",
     "## Video 1: Introduction\n",
     "<iframe\n",
     "width=\"560\"\n",
