--- a/book/calculation_examples/LCA/TSCT_example.ipynb
+++ b/book/calculation_examples/LCA/TSCT_example.ipynb
@@ -4,13 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Structural Carbon Tool - Example"
+    "# The Structural Carbon Tool - Example\n",
+    "\n",
+    "```{warning}\n",
+    "This tool was obtained from the [Website of The Institution of Structural Engineers](https://www.istructe.org/resources/guidance/the-structural-carbon-tool/) at 27/10/2024. Please be aware that it may be outdated.\n",
+    "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
